--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,65 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>The Listen - 로그인</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>The Listen - 대시보드</title>
 <style>
-  body{margin:0;font-family:"Noto Sans KR",sans-serif;background:#f7f9fc}
-  .wrap{max-width:420px;margin:60px auto;padding:20px}
-  .logo{
-    font-size:44px;font-weight:900;text-align:center;
-    background:linear-gradient(90deg,#007bff,#00b4d8);
-    -webkit-background-clip:text;color:transparent;
-    margin-bottom:14px;
+  body { 
+    margin: 0; 
+    font-family: "Noto Sans KR", sans-serif; 
+    background: #f7f9fc; 
+    text-align: center;
   }
-  .sub{color:#6b7280;text-align:center;margin-bottom:24px;font-size:15px}
-  .card{background:#fff;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.06);padding:22px}
-  label{display:block;font-weight:700;margin-bottom:6px}
-  input[type="text"],input[type="password"]{
-    width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px;outline:none
+  header {
+    background: #007bff;
+    color: white;
+    padding: 20px;
+    font-weight: 800;
+    font-size: 22px;
   }
-  .chk{display:flex;align-items:center;margin:8px 0;gap:6px;font-size:14px}
-  .btn{width:100%;background:#007bff;color:#fff;border:none;padding:12px;border-radius:10px;font-weight:700;cursor:pointer}
-  .links{display:flex;justify-content:space-between;margin-top:12px}
-  .links a{color:#007bff;text-decoration:none;font-weight:700}
+  .content {
+    padding: 40px 20px;
+  }
+  button {
+    background: #007bff;
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: 700;
+  }
 </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="logo">The Listen</div>
-    <div class="sub">AI·GPS 기반 배송 어플</div>
-    <div class="card">
-      <label>아이디</label>
-      <input id="loginId" type="text" placeholder="아이디 입력" />
-      <label>비밀번호</label>
-      <input id="loginPw" type="password" placeholder="비밀번호 입력" />
-      <div class="chk">
-        <input id="saveId" type="checkbox" /> <label for="saveId">아이디 저장</label>
-      </div>
-      <button class="btn" onclick="login()">로그인</button>
-      <div class="links">
-        <a href="signup.html">회원가입</a>
-        <div>
-          <a href="find_id.html" style="margin-right:10px;">아이디찾기</a>
-          <a href="find_pw.html">비밀번호찾기</a>
-        </div>
-      </div>
-    </div>
+  <header>The Listen Dashboard</header>
+  <div class="content">
+    <h2>🚚 로그인 성공!</h2>
+    <p>이 화면이 보이면 로그인 페이지가 정상 작동 중입니다.</p>
+    <p>이제 <b>map.html</b> 또는 <b>depart.html</b> 등으로 연결할 수 있습니다.</p>
+    <button onclick="location.href='index.html'">로그아웃</button>
   </div>
-<script>
-window.onload=function(){
-  const saved=localStorage.getItem('savedId');
-  if(saved){ document.getElementById('loginId').value=saved; document.getElementById('saveId').checked=true; }
-}
-function login(){
-  const id=document.getElementById('loginId').value;
-  const pw=document.getElementById('loginPw').value;
-  if(!id||!pw){alert("아이디와 비밀번호를 입력하세요.");return;}
-  if(document.getElementById('saveId').checked) localStorage.setItem('savedId',id);
-  else localStorage.removeItem('savedId');
-  location.href='dashboard.html';
-}
-</script>
 </body>
 </html>
