--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>The Listen - 대시보드</title>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>대시보드 - The Listen</title>
 <style>
-  body { 
-    margin: 0; 
-    font-family: "Noto Sans KR", sans-serif; 
-    background: #f7f9fc; 
-    text-align: center;
-  }
-  header {
-    background: #007bff;
-    color: white;
-    padding: 20px;
-    font-weight: 800;
-    font-size: 22px;
-  }
-  .content {
-    padding: 40px 20px;
-  }
-  button {
-    background: #007bff;
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-weight: 700;
-  }
+  body{margin:0;background:#f5f7fa;font-family:"Noto Sans KR",sans-serif}
+  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:700}
+  .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px;max-width:720px;margin:16px auto;padding:12px}
+  .card{background:#fff;border-radius:16px;padding:16px;box-shadow:0 10px 26px rgba(0,0,0,.06)}
+  .title{font-weight:900;margin-bottom:6px}
+  .small{color:#6b7280;margin-bottom:8px}
+  .btn{display:inline-block;background:#007bff;color:#fff;border:none;border-radius:10px;padding:10px 12px;text-decoration:none;font-weight:700}
+  .row{display:flex;justify-content:space-between;align-items:center}
+  .num{font-weight:900;font-size:20px}
 </style>
 </head>
 <body>
-  <header>The Listen Dashboard</header>
-  <div class="content">
-    <h2>🚚 로그인 성공!</h2>
-    <p>이 화면이 보이면 로그인 페이지가 정상 작동 중입니다.</p>
-    <p>이제 <b>map.html</b> 또는 <b>depart.html</b> 등으로 연결할 수 있습니다.</p>
-    <button onclick="location.href='index.html'">로그아웃</button>
+<header>대시보드</header>
+<div class="grid">
+  <!-- 1) 배송출발 -->
+  <div class="card">
+    <div class="title">배송출발</div>
+    <div class="small">UI에서는 <b>스캔 잡은 수량만 표기</b> · 별도 페이지(고객카드/네비/스캔)</div>
+    <div class="row"><div>스캔 수량</div><div class="num" id="scannedCnt">0</div></div>
+    <a class="btn" href="depart.html">배송출발 페이지로</a>
   </div>
+
+  <!-- 2) 배송중 -->
+  <div class="card">
+    <div class="title">배송중 (현재 지도보기)</div>
+    <div class="small">UI에서는 <b>배송 수량만 표기</b> · 클릭 시 지도 페이지 연결</div>
+    <div class="row"><div>진행 중</div><div class="num" id="inProgressCnt">0</div></div>
+    <a class="btn" href="map.html">현재 지도보기</a>
+  </div>
+
+  <!-- 3) 배송완료 -->
+  <div class="card">
+    <div class="title">배송완료</div>
+    <div class="small">클릭 시 별도 페이지 이동 · <b>당일 완료</b> 고객카드/사진 확인</div>
+    <div class="row"><div>당일 완료</div><div class="num" id="completedCnt">0</div></div>
+    <a class="btn" href="completed.html">완료 내역 보기</a>
+  </div>
+
+  <!-- 4) 실적 조회 -->
+  <div class="card">
+    <div class="title">실적 조회</div>
+    <div class="small">일/월 단위 · 달력 날짜 클릭 → 완료건 · 월료 표기</div>
+    <a class="btn" href="stats.html">실적 조회</a>
+  </div>
+
+  <!-- 5) 어플 사용방법/회사 설명 -->
+  <div class="card">
+    <div class="title">어플 사용방법</div>
+    <div class="small">기능 및 회사 설명 페이지로 연결</div>
+    <a class="btn" href="howto.html">안내 보기</a>
+  </div>
+</div>
+<script>
+  const completed = JSON.parse(localStorage.getItem('completed')||'[]');
+  const today = new Date().toISOString().slice(0,10);
+  const todayDone = completed.filter(x=>x.date===today).length;
+  const scanned = Number(localStorage.getItem('scanned')||'0');
+  const total = Number(localStorage.getItem('totalDeliveries')||'1'); // 지도에서 설정
+  document.getElementById('completedCnt').innerText = todayDone;
+  document.getElementById('scannedCnt').innerText = scanned;
+  document.getElementById('inProgressCnt').innerText = Math.max(total - todayDone, 0);
+</script>
 </body>
 </html>
